Fix styling spacing issue

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,7 @@ h2 {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 1000px;
   text-align: left;
   height: auto;
   margin: 0 auto;
@@ -78,6 +79,11 @@ li:nth-child(even) {
   box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
   border-radius: 10px;
   padding: 1rem;
+}
+
+.left-side, 
+.right-side {
+  padding: 5rem;
 }
 
 .add-your-score {
